# cpp-pimpl-tutorial

./: CMakeLists.txt  README.md  brittle_gyroscope_main.cpp  main.cpp
.github/workflows/: build.yml  duplicate-code.yml
private/: CMakeLists.txt
private/include/: CommunicationBus.h  I2cBrittleGyroscope.h  I2cCommunicationBus.h  SpiCommunicationBus.h  SpiGyroscope.h
private/src/: GyroscopeFactory.cpp  I2cBrittleGyroscope.cpp  I2cCommunicationBus.cpp  I2cGyroscopeImpl.cpp  SpiCommunicationBus.cpp  SpiGyroscope.cpp  SpiGyroscopeImpl.cpp
public/: BrittleGyroscope.h  CMakeLists.txt  Gyroscope.h  GyroscopeFactory.h
test/: CMakeLists.txt  DummyTest.cpp  SpiGyroscopeTest.cpp
test/mocks/: MockCommunicationBus.h
